--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ modularity and reducing unit testing time by 25%.
 <h2>Other</h2>
 <ul>
     <li><a href="./contact.html">Personal Information</a></li>
-    <li><a href="./contact.html">My Hobbies</a>  </li>
+    <li><a href="./hobbies.html">My Hobbies</a>  </li>
 </ul>
 <footer>
     <p>© Gauthami Narendra. All rights reserved.</p>
